--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -18,11 +18,12 @@ header .headerSearch
 }
 header .headerSearch .selecrDrop
 {
-    width:25%;
+    width:150px;
     font-size:bold;
     font-weight: 500;
     text-transform: capitalize;
-    position:relative;
+    position:absolute;
+    top: 0px;
 }
 header .headerSearch .selecrDrop::after{
     content: '';
