--- a/src/components/selectDrop/select.css
+++ b/src/components/selectDrop/select.css
@@ -1,11 +1,19 @@
 .selectDrop
 {
-    width: 150px;
+    width: 226px;
     height: 300px;
     background: #fff;
     position: absolute;
     left: -7px;
     top: 160%;
     z-index: 100;
-    box-shadow: 0 3px 6px rgb(0 0 0 / 20%)
+    box-shadow: 0 3px 6px rgb(0 0 0 / 20%);
+    padding:15px;
+}
+.SearchField input{
+    width: 100%;
+    height: 40px;
+    border:1px solid #bce3c9;
+    outline: none;
+    padding: 0 15px;
 }
