--- a/src/components/selectDrop/select.css
+++ b/src/components/selectDrop/select.css
@@ -1,7 +1,7 @@
 .selectDrop
 {
     width: 226px;
-    height: 300px;
+    height: auto;
     background: #fff;
     position: absolute;
     left: -7px;
@@ -12,8 +12,37 @@
 }
 .SearchField input{
     width: 100%;
-    height: 40px;
+    height: 50px;
     border:1px solid #bce3c9;
     outline: none;
     padding: 0 15px;
+}
+.selectDrop .searchResults
+{
+    width: 100%;
+    margin: 0px;
+    margin-top: 5px;
+    padding: 10px 0px;
+    max-height: 300px;
+    overflow-y: scroll;
+}
+.selectDrop .searchResults li{
+    list-style: none;
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 300;
+
+}
+.selectDrop .searchResults li:hover
+{
+    background-color: #3bb77e;
+}
+.selectDrop .searchResults::-webkit-scrollbar
+{
+    width:8px !important;
+}
+.selectDrop .searchResults::-webkit-scrollbar-thumb
+{
+    background-color: #ccc;
 }
