--- a/src/components/selectDrop/select.css
+++ b/src/components/selectDrop/select.css
@@ -1,18 +1,23 @@
+.selectDropWrapper .selectOpen
+{
+    display: block;
+    padding: 10px 0px;
+}
 .selectDrop
 {
-    width: 226px;
+    width: 300px;
     height: auto;
     background: #fff;
     position: absolute;
-    left: -7px;
-    top: 160%;
+    left: -15px;
+    top: 140%;
     z-index: 100;
     box-shadow: 0 3px 6px rgb(0 0 0 / 20%);
     padding:15px;
 }
 .SearchField input{
     width: 100%;
-    height: 50px;
+    height: 40px;
     border:1px solid #bce3c9;
     outline: none;
     padding: 0 15px;
