--- a/src/components/selectDrop/select.css
+++ b/src/components/selectDrop/select.css
@@ -2,6 +2,7 @@
 {
     display: block;
     padding: 10px 0px;
+    /*position: absolute;*/
 }
 .selectDropWrapper .selectOpen .arrow
 {
@@ -61,3 +62,4 @@
 {
     background-color: #ccc;
 }
+
