--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -82,7 +82,25 @@ header .headerTabs
 {
     padding-left:40px;
 }
+header .headerTabs li
+{
+    position: relative;
+}
 header .headerTabs li span{
-    font-size:20px;
+    font-size:18px;
     cursor: pointer;
+}
+header .headerTabs li span img{
+    margin-right: 10px;
+}
+
+header .headerTabs li span .badge{
+    width:25px;
+    height:25px;
+    color:#fff;
+    font-size:12px;
+    font-weight:400;
+    position:absolute;
+    top:-12px;
+    left:15px;
 }
