--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -85,6 +85,7 @@ header .headerTabs
 header .headerTabs li
 {
     position: relative;
+    margin-left:10px;
 }
 header .headerTabs li span{
     font-size:18px;
@@ -101,6 +102,6 @@ header .headerTabs li span .badge{
     font-size:12px;
     font-weight:400;
     position:absolute;
-    top:-12px;
+    top:-16px;
     left:15px;
 }
