--- a/src/components/selectDrop/select.css
+++ b/src/components/selectDrop/select.css
@@ -45,6 +45,7 @@
     padding: 10px;
     font-size: 16px;
     font-weight: 300;
+    border-radius: 6px;
 
 }
 .selectDrop .searchResults li:hover
