--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,17 @@ body{
 {
   padding:0px 36px;
 }
+
+.bg-g,.bg-success
+{
+  background: #3bb77e !important;
+}
+.text-g
+{
+  background: #3bb77e;
+}
+
+.text-white
+{
+  background: #fff;
+}
