--- a/src/components/header/nav/nav.css
+++ b/src/components/header/nav/nav.css
@@ -1,9 +1,15 @@
 .nav
 {
     width:100%;
-    height:70px;
+    height:80px;
     margin:auto;
     border-top:1px solid #ececec;
     border-bottom:1px solid #ececec;
 
+}
+.nav .catTab
+{
+    padding:8px 20px !important;
+    font-size:20px !important;
+    text-transform: capitalize;
 }
