--- a/src/components/header/nav/nav.css
+++ b/src/components/header/nav/nav.css
@@ -13,3 +13,15 @@
     font-size:20px !important;
     text-transform: capitalize;
 }
+
+.nav nav ul li button{
+    text-transform: capitalize !important;
+    padding:21px 25px !important;
+}
+
+.nav nav ul li button a{
+text-decoration: none !important;
+color:#000;
+font-size:20px !important;
+
+}
