--- a/src/components/header/nav/nav.css
+++ b/src/components/header/nav/nav.css
@@ -25,3 +25,6 @@ color:#000;
 font-size:20px !important;
 
 }
+.nav .part3 .phNo svg{font-size:45px !important;}
+.nav .part3 .phNo h3{font-size:35px !important; line-height:35px;}
+.nav .part3 .phNo p{font-size:15px!important;}
