--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -117,6 +117,7 @@ header .headerTabs li span .badge{
     background: #fff;
     box-shadow: 0 3px 6px rgb(0 0 0 / 20%);
     margin:0px !important;
+    z-index:100;
 }
  .dropdownMenu li{
     list-style: none;
