--- a/src/components/header/nav/nav.css
+++ b/src/components/header/nav/nav.css
@@ -18,6 +18,9 @@
     text-transform: capitalize !important;
     padding:21px 25px !important;
 }
+.nav nav ul li button a:hover{
+    color:#3bb77e;
+}
 
 .nav nav ul li button a{
 text-decoration: none !important;
@@ -25,6 +28,6 @@ color:#000;
 font-size:20px !important;
 
 }
-.nav .part3 .phNo svg{font-size:45px !important;}
-.nav .part3 .phNo h3{font-size:35px !important; line-height:35px;}
-.nav .part3 .phNo p{font-size:15px!important;}
+.nav .part3 .phNo svg{font-size:50px !important;}
+.nav .part3 .phNo h3{font-size:32px !important; line-height:35px !important;}
+.nav .part3 .phNo p{font-size:16px!important;}
